[project]
name = "iiif-image-server"
version = "1.0.0"
description = "A IIIF enabled media server primarily used by the NHM Data Portal"
readme = "README.md"
license-files = ["LICENSE"]
authors = [
    { name = "Natural History Museum", email = "data@nhm.ac.uk" },
]
keywords = [
    "data",
    "iiif",
    "image",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "aiofiles==0.8.0",
    "aiohttp[speedups]==3.8.1",
    "aiozipstream==0.4",
    "cachetools==5.0.0",
    "cffi==1.15.0",
    "elasticsearch-dsl==6.4.0",
    "fastapi==0.77.1",
    "filetype==1.2.0",
    "humanize==4.1.0",
    # at the time of writing, the latest version of this lib on pypi (0.5.2) doesn't
    # install correctly, whereas the latest commit on master does, hence we'll just
    # install directly from github
    "jpegtran-cffi @ git+https://github.com/jbaiter/jpegtran-cffi.git@70928eb#egg=jpegtran-cffi",
    "loky==3.1.0",
    "pillow==9.1.0",
    "pyyaml==6.0",
    "uvicorn[standard]==0.17.6",
]

[project.optional-dependencies]
test = [
    "aioresponses",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "requests",  # required by Starlette's test client
]

[project.urls]
repository = "https://github.com/NaturalHistoryMuseum/iiif-image-server"
changelog = "https://github.com/NaturalHistoryMuseum/iiif-image-server/blob/main/CHANGELOG.md"


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[tool]
[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
exclude = ["tests"]

[tool.commitizen]
name = "cz_nhm"
version = "1.0.0"
tag_format = "v$version"
update_changelog_on_bump = true
changelog_incremental = true
version_files = [
    "pyproject.toml:version",
    "CITATION.cff:^version"
]

[tool.ruff]
target-version = "py38"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "D"
]
ignore = [
    "D100",
    "D104",
    "D200",
    "D202",
    "D203",
    "D205",
    "D206",
    "D212",
    "D300",
    "D401",
    "E111",
    "E114",
    "E117"
]

[tool.docformatter]
wrap-summaries = 88
wrap-descriptions = 88
pre-summary-newline = true
make-summary-multi-line = true