[metadata]
name = iiif-image-server
version = 0.14
description = A IIIF enabled media server primarily used by the NHM Data Portal
long_description = file: README.md
license_files = LICENSE
author = Natural History Museum
author_email = data@nhm.ac.uk
url = https://github.com/NaturalHistoryMuseum/iiif-image-server
keywords = iiif image data
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    aiofiles==0.8.0
    aiohttp[speedups]==3.8.1
    aiozipstream==0.4
    cachetools==5.0.0
    cffi==1.15.0
    elasticsearch-dsl==6.4.0
    fastapi==0.77.1
    humanize==4.1.0
    # at the time of writing, the latest version of this lib on pypi (0.5.2) doesn't install
    # correctly, whereas the latest commit on master does, hence we'll just install directly from
    # github
    jpegtran-cffi @ git+https://github.com/jbaiter/jpegtran-cffi.git@70928eb#egg=jpegtran-cffi
    pillow==9.1.0
    pyyaml==6.0
    uvicorn[standard]==0.17.6
    wand==0.6.7
    loky==3.1.0

[options.extras_require]
test =
    pytest
    pytest-asyncio
    pytest-cov
    aioresponses
    # required by Starlette's test client
    requests

[options.packages.find]
exclude =
    tests
